syntax = "proto3";

package com.example.demo;
option java_package = "com.example.demo";

service VeryLongTimeService {//rpc 정의
  rpc requestLongTime (LongTimeRequest) returns (LongTimeResponse);
}

message LongTimeRequest {
  string message = 1;
}

message LongTimeResponse {
  string message = 1;
}